agregué simulador js de tienda

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -56,4 +56,9 @@ header{
     }
 }
 
+#cantItems{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
 /*-----Fin del diseño del header-----*/
