Javascript. Arrays y objetos

--- a/css/_body.scss
+++ b/css/_body.scss
@@ -125,6 +125,13 @@ section{
     font-size: 16px;
 }
 
+.card-cantidad{
+    width: 50px;
+    display: inline;
+    margin-bottom: 10px;
+    text-align: center; 
+}
+
 /* Fin de Tienda de productos */
 
 /* --- Carrousel de imágenes --- */
