--- a/css/_header.scss
+++ b/css/_header.scss
@@ -59,6 +59,14 @@ header{
 #cantItems{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
+    font-size: larger;
+    width: 30px;
+    color: red;
+    border: 2px solid black;
+    background-color: white;
+    text-align: center;
+    border-radius: 12px;
+    transform: translateX(-8px);
 }
 
 /*-----Fin del diseño del header-----*/
