--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,18 @@
   padding: 0px 5px;
 }
 
+.boton-cancelarCompra {
+  margin-left: 20px;
+}
+
+.boton-eliminar {
+  width: 30px;
+  padding-bottom: 8px;
+}
+.boton-eliminar:hover {
+  content: url("../assets/images/open-trash.png");
+}
+
 .boton-addcart {
   width: 120px;
 }
@@ -41,6 +53,9 @@
 .boton-addcart:hover {
   background-color: black;
   color: white;
+}
+.boton-addcart::-webkit-inner-spin-button, .boton-addcart::-webkit-outer-spin-button {
+  opacity: 1;
 }
 
 .boton-buscar {
@@ -63,6 +78,14 @@
 .boton-miembro:active {
   background-color: white;
   color: black;
+}
+
+.boton-disabled {
+  background-color: grey;
+  color: white;
+}
+.boton-disabled:hover {
+  background-color: grey;
 }
 
 /* --- Fin Botones --- */
@@ -123,6 +146,14 @@ header {
 #cantItems {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  font-size: larger;
+  width: 30px;
+  color: red;
+  border: 2px solid black;
+  background-color: white;
+  text-align: center;
+  border-radius: 12px;
+  transform: translateX(-8px);
 }
 
 /*-----Fin del diseño del header-----*/
@@ -232,12 +263,55 @@ section article table {
 }
 
 .card {
-  border: none;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  --bs-card-border-color: none;
 }
 
+.card-img-top {
+  width: 160px;
+  align-self: center;
+  position: relative;
+  z-index: 2;
+}
 .card-img-top:hover {
   /*background-color: lightgray;*/
   transform: scale(1.1, 1.1);
+}
+.card-img-top:hover + .card-moreinfo {
+  width: 5rem;
+  height: 2rem;
+  display: block;
+  transform: translateX(0);
+  transition: 2s ease;
+  font-size: 16px;
+}
+
+.card-img-nostock {
+  opacity: 50%;
+  width: 160px;
+  display: block;
+  z-index: 4;
+  transform: translateY(-160px);
+  position: absolute;
+  justify-self: center;
+}
+
+.card-moreinfo {
+  position: absolute;
+  z-index: 3;
+  top: 80px;
+  display: none;
+  left: 25%;
+  background-color: rgb(80, 80, 80);
+  color: white;
+  width: 5rem;
+  height: 2rem;
+}
+.card-moreinfo:hover {
+  opacity: 75%;
+  display: block;
 }
 
 .card-title {
@@ -250,10 +324,21 @@ section article table {
 }
 
 .card-cantidad {
+  width: 120px;
+  display: flex;
+  flex-flow: column wrap;
+  margin-left: 10%;
+  justify-content: center;
+  align-self: center;
+}
+.card-cantidad label {
+  align-self: center;
+}
+.card-cantidad input {
   width: 50px;
-  display: inline;
-  margin-bottom: 10px;
   text-align: center;
+  align-self: center;
+  margin: 5px 0px;
 }
 
 /* Fin de Tienda de productos */
@@ -281,6 +366,96 @@ section article table {
 }
 
 /* --- Fin Carrousel de imágenes --- */
+/* --- Carrito de compras --- */
+#carrito {
+  text-align: center;
+  width: auto;
+  margin-left: 25%;
+}
+#carrito th {
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #451C17;
+  color: white;
+}
+#carrito tr {
+  color: #451C17;
+  height: 20px;
+  border-top: 1px solid;
+  align-content: center;
+}
+#carrito tr img {
+  padding-bottom: 5px;
+}
+#carrito .img-nostock {
+  opacity: 30%;
+}
+#carrito .descripcion {
+  width: 300px;
+}
+#carrito .colClasica {
+  width: 100px;
+}
+#carrito .colEliminar {
+  width: 30px;
+}
+
+#datosCompra {
+  display: flex;
+  flex-flow: column;
+  margin-right: 35%;
+  row-gap: 15px;
+}
+
+#validarCupon_invalido {
+  color: red;
+  margin-left: 40%;
+  visibility: hidden;
+}
+
+.mostrar {
+  visibility: visible;
+}
+
+/* --- Fin Carrito de compras --- */
+#mas-info-overlay {
+  position: fixed;
+  z-index: 1;
+  height: 250px;
+  width: 50%;
+  opacity: 0%;
+  transform: translateX(350px);
+  transition: 2s ease-out;
+  background-color: rgb(234, 210, 172);
+  padding: 10px;
+  border-radius: 8px;
+}
+
+#mas-info-overlay.open {
+  opacity: 100%;
+  z-index: 10;
+  word-wrap: break-word;
+}
+
+.mas-info {
+  position: fixed;
+}
+
+#close-btn {
+  position: fixed;
+  font-size: 1.5rem;
+  text-align: right;
+  float: right;
+  margin: 0.5em 2em 0 0;
+  color: black;
+  cursor: pointer;
+}
+
+.masInfo_texto {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 /* --- Generar tienda --- */
 /* --- Fin Tienda --- */
 /* ---Mobile--- */
@@ -725,12 +900,55 @@ section article table {
 }
 
 .card {
-  border: none;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  --bs-card-border-color: none;
 }
 
+.card-img-top {
+  width: 160px;
+  align-self: center;
+  position: relative;
+  z-index: 2;
+}
 .card-img-top:hover {
   /*background-color: lightgray;*/
   transform: scale(1.1, 1.1);
+}
+.card-img-top:hover + .card-moreinfo {
+  width: 5rem;
+  height: 2rem;
+  display: block;
+  transform: translateX(0);
+  transition: 2s ease;
+  font-size: 16px;
+}
+
+.card-img-nostock {
+  opacity: 50%;
+  width: 160px;
+  display: block;
+  z-index: 4;
+  transform: translateY(-160px);
+  position: absolute;
+  justify-self: center;
+}
+
+.card-moreinfo {
+  position: absolute;
+  z-index: 3;
+  top: 80px;
+  display: none;
+  left: 25%;
+  background-color: rgb(80, 80, 80);
+  color: white;
+  width: 5rem;
+  height: 2rem;
+}
+.card-moreinfo:hover {
+  opacity: 75%;
+  display: block;
 }
 
 .card-title {
@@ -743,10 +961,21 @@ section article table {
 }
 
 .card-cantidad {
+  width: 120px;
+  display: flex;
+  flex-flow: column wrap;
+  margin-left: 10%;
+  justify-content: center;
+  align-self: center;
+}
+.card-cantidad label {
+  align-self: center;
+}
+.card-cantidad input {
   width: 50px;
-  display: inline;
-  margin-bottom: 10px;
   text-align: center;
+  align-self: center;
+  margin: 5px 0px;
 }
 
 /* Fin de Tienda de productos */
@@ -774,6 +1003,96 @@ section article table {
 }
 
 /* --- Fin Carrousel de imágenes --- */
+/* --- Carrito de compras --- */
+#carrito {
+  text-align: center;
+  width: auto;
+  margin-left: 25%;
+}
+#carrito th {
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #451C17;
+  color: white;
+}
+#carrito tr {
+  color: #451C17;
+  height: 20px;
+  border-top: 1px solid;
+  align-content: center;
+}
+#carrito tr img {
+  padding-bottom: 5px;
+}
+#carrito .img-nostock {
+  opacity: 30%;
+}
+#carrito .descripcion {
+  width: 300px;
+}
+#carrito .colClasica {
+  width: 100px;
+}
+#carrito .colEliminar {
+  width: 30px;
+}
+
+#datosCompra {
+  display: flex;
+  flex-flow: column;
+  margin-right: 35%;
+  row-gap: 15px;
+}
+
+#validarCupon_invalido {
+  color: red;
+  margin-left: 40%;
+  visibility: hidden;
+}
+
+.mostrar {
+  visibility: visible;
+}
+
+/* --- Fin Carrito de compras --- */
+#mas-info-overlay {
+  position: fixed;
+  z-index: 1;
+  height: 250px;
+  width: 50%;
+  opacity: 0%;
+  transform: translateX(350px);
+  transition: 2s ease-out;
+  background-color: rgb(234, 210, 172);
+  padding: 10px;
+  border-radius: 8px;
+}
+
+#mas-info-overlay.open {
+  opacity: 100%;
+  z-index: 10;
+  word-wrap: break-word;
+}
+
+.mas-info {
+  position: fixed;
+}
+
+#close-btn {
+  position: fixed;
+  font-size: 1.5rem;
+  text-align: right;
+  float: right;
+  margin: 0.5em 2em 0 0;
+  color: black;
+  cursor: pointer;
+}
+
+.masInfo_texto {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 /* --- Formulario --- */
 fieldset {
   line-height: 30px;
