--- a/css/_header.scss
+++ b/css/_header.scss
@@ -60,12 +60,11 @@ header{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: larger;
-    width: 30px;
-    color: red;
-    border: 2px solid black;
-    background-color: white;
+    width: 25px;
+    color: white;
+    background-color: red;
     text-align: center;
-    border-radius: 12px;
+    border-radius: 30px;
     transform: translateX(-8px);
 }
 
