--- a/css/styles.css
+++ b/css/styles.css
@@ -147,12 +147,11 @@ header {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: larger;
-  width: 30px;
-  color: red;
-  border: 2px solid black;
-  background-color: white;
+  width: 25px;
+  color: white;
+  background-color: red;
   text-align: center;
-  border-radius: 12px;
+  border-radius: 30px;
   transform: translateX(-8px);
 }
 
@@ -418,6 +417,7 @@ section article table {
 }
 
 /* --- Fin Carrito de compras --- */
+/* --- Mas info en Tienda --- */
 #mas-info-overlay {
   position: fixed;
   z-index: 1;
@@ -444,16 +444,21 @@ section article table {
 #close-btn {
   position: fixed;
   font-size: 1.5rem;
-  text-align: right;
   float: right;
-  margin: 0.5em 2em 0 0;
+  margin: 0px 300px;
   color: black;
   cursor: pointer;
+  z-index: 11;
+}
+
+.masInfo_Titulo {
+  text-align: left;
 }
 
 .masInfo_texto {
   text-align: justify;
   text-justify: inter-word;
+  padding: 20px;
 }
 
 /* --- Generar tienda --- */
@@ -1055,6 +1060,7 @@ section article table {
 }
 
 /* --- Fin Carrito de compras --- */
+/* --- Mas info en Tienda --- */
 #mas-info-overlay {
   position: fixed;
   z-index: 1;
@@ -1081,16 +1087,21 @@ section article table {
 #close-btn {
   position: fixed;
   font-size: 1.5rem;
-  text-align: right;
   float: right;
-  margin: 0.5em 2em 0 0;
+  margin: 0px 300px;
   color: black;
   cursor: pointer;
+  z-index: 11;
+}
+
+.masInfo_Titulo {
+  text-align: left;
 }
 
 .masInfo_texto {
   text-align: justify;
   text-justify: inter-word;
+  padding: 20px;
 }
 
 /* --- Formulario --- */
