--- a/css/_destacados.scss
+++ b/css/_destacados.scss
@@ -31,6 +31,26 @@
     } 
 }
 
+.productoDestacadoExtranjero{
+    display: flex;
+    flex-flow: column-nowrap;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.productoDestacadoExtranjero__imagen{
+    width: 40px;
+}
+
+.productoDestacadoExtranjero__nombre{
+    vertical-align: bottom;
+    text-align: center;
+    width: 200px;
+    font-size: 18px;
+}
+
 /* Eventos destacados: index */
 
 #proximosEventos{
